# EntityCraft_Qt

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  example-1.cpp  example-2.cpp
include/EntityCraft_Qt/: entitycraft-qt.h
include/EntityCraft_Qt/converter/: nullcheker.h  relationinserter.h  sfinae.h
src/converter/: nullcheker.cpp  relationinserter.cpp  sfinae.cpp
